rename CopyPaste to NaviClipboard
we want to get rid of the global statics here